# kqtcore3d

./: .gitignore  CMakeLists.txt
include/: common.h  kqtcore3d.h
include/core/: camera.h  core.h  mesh.h  model.h  shaderprogram.h
include/graphics/opengl/: openglmesh.h
include/interfaces/: idrawable.h  imodelimporter.h  irenderable.h  irendercallback.h  ivertices.h
include/kqtcore3d/: common.h  kqtcore3d.h  kqtcore3dutils.h
include/kqtcore3d/callbacks/: callbacks.h  rendercallback.h
include/kqtcore3d/components/: bufferlayout.h  components.h  indices.h  mesh.h  model.h  perspectivecamera.h  shaderprogram.h  vertices.h
include/kqtcore3d/components/opengl/: openglmesh.h  openglmodel.h  openglshaderprogram.h
include/kqtcore3d/core/: basecamera.h  basemesh.h  basemodel.h  baseshaderprogram.h  camera.h  core.h  mesh.h  model.h  shaderprogram.h  shaderprogramlayout.h
include/kqtcore3d/interfaces/: iindices.h  imodelimporter.h  interfaces.h  irenderable.h  irendercallback.h  ivertices.h
include/kqtcore3d/renderers/: mesh.h  model.h  orthocamera.h  perspectivecamera.h  renderers.h  shaderprogram.h
include/kqtcore3d/renderers/opengl/: openglmesh.h  openglmodel.h  openglshaderprogram.h
include/renderers/opengl/: openglmesh.h  openglmodel.h
prebuilt/Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/: kqtcore3d.lib  kqtcore3dd.lib
prebuilt/Desktop_Qt_6_5_2_MSVC2019_64bit-Release/: kqtcore3d.lib
prebuilt/build-kqtcore3d-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/: kqtcore3d.lib
prebuilt/build-kqtcore3d-Desktop_Qt_6_5_2_MSVC2019_64bit-Release/: kqtcore3d.lib
src/: kqtcore3d.cpp
src/components/: bufferlayout.cpp  indices.cpp  mesh.cpp  model.cpp  orthocamera.cpp  perspectivecamera.cpp  shaderprogram.cpp  vertices.cpp
src/components/opengl/: openglmesh.cpp  openglmodel.cpp  openglshaderprogram.cpp
src/core/: basecamera.cpp  basemesh.cpp  basemodel.cpp  baseshaderprogram.cpp  camera.cpp  mesh.cpp  model.cpp  shaderprogram.cpp  shaderprogramlayout.cpp
src/graphics/opengl/: openglmesh.cpp
src/renderers/: mesh.cpp  model.cpp  orthocamera.cpp  perspectivecamera.cpp  shaderprogram.cpp
src/renderers/opengl/: indices.cpp  openglmesh.cpp  openglmodel.cpp  openglshaderprogram.cpp
